Fix: Update file paths for Netlify deployment and add password protection

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
 
-    <link rel="stylesheet" href="../src/css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body
     class="bg-gray-50 dark:bg-gray-900 transition-colors duration-300 font-inter"
@@ -2644,7 +2644,7 @@
       </div>
     </div>
 
-    <script src="../src/js/firebase-config.js"></script>
-    <script src="../src/js/main.js"></script>
+    <script src="js/firebase-config.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
