--- a/src/index.html
+++ b/src/index.html
@@ -1486,7 +1486,6 @@
                       </div>
                     </div>
                   </div>
-                  </p>
                 </div>
               </div>
 
@@ -1799,7 +1798,6 @@
                       </div>
                     </div>
                   </div>
-                  </p>
                 </div>
               </div>
 
@@ -1982,7 +1980,7 @@
                       <div class="linear-item-label">שלב 2 - שאלת עורכי הדין</div>
                       <div class="linear-item-value editable" data-field="order_step_2">שאלת עו"ד במשרד אם צריכים ציוד, כיבוד או חד פעמי</div>
                     </div>
-                    <button class="copy-btn" onclick="copyToClipboard('שאלת עו\"ד במשרד אם צריכים ציוד, כיבוד או חד פעמי')">
+                    <button class="copy-btn" onclick="copyToClipboard('שאלת עו&quot;ד במשרד אם צריכים ציוד, כיבוד או חד פעמי')">
                       <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20">
                         <path d="M8 3a1 1 0 011-1h2a1 1 0 110 2H9a1 1 0 01-1-1z"></path>
                         <path d="M6 3a2 2 0 00-2 2v11a2 2 0 002 2h8a2 2 0 002-2V5a2 2 0 00-2-2 3 3 0 01-3 3H9a3 3 0 01-3-3z"></path>
